--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "elangdf-client"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "1.0.1"
+description = "Radio Direction Finder"
+authors = ["PT SCM"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
