--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.11"
+  },
+  "dependencies": {
+    "@tauri-apps/plugin-window-state": "^2.0.0-beta.3"
   }
 }
